--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,8 +6,8 @@
                   Qibing Ren and
                   Junchi Yan},
   title        = {Rethinking and Improving Robustness of Convolutional Neural Networks: a Shapley Value-based Approach in Frequency Domain},
-  booktitle    = {NeurIPS},
-  url          = {https://papers.nips.cc/paper_files/paper/2022/hash/022abe84083d235f7572ca5cba24c51c-Abstract-Conference.html},
+  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
+  html          = {https://papers.nips.cc/paper_files/paper/2022/hash/022abe84083d235f7572ca5cba24c51c-Abstract-Conference.html},
   year         = {2022},
   selected     = {true},
 }
@@ -15,20 +15,20 @@
 @inproceedings{Chen24RoPE,
   author       = {Yiting Chen and Junchi Yan},
   title        = {What Rotary Position Embedding Can Tell Us: Identifying Query and Key Weights Corresponding to Basic Syntactic or High-level Semantic Information},
-  booktitle    = {NeurIPS},
+  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   year         = {2024},
   selected     = {true},
-  url          = {https://neurips.cc/virtual/2024/poster/94296},
+  html          = {https://neurips.cc/virtual/2024/poster/94296},
   pdf          = {RoPE_investigate.pdf},
 }
 
 @inproceedings{Chen24Matthew,
   author       = {Yiting Chen and Jiazi Bu and Junchi Yan},
   title        = {Unveiling The Matthew Effect Across Channels: Assessing Layer Width Sufficiency via Weight Norm Variance},
-  booktitle    = {NeurIPS},
+  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   year         = {2024},
   selected     = {true},
-  url          = {https://neurips.cc/virtual/2024/poster/95024},
+  html          = {https://neurips.cc/virtual/2024/poster/95024},
   pdf          = {Matthew_Effect.pdf}
 }
 
@@ -38,23 +38,23 @@
                   Junchi Yan},
   title        = {Going Beyond Neural Network Feature Similarity: The Network Feature
                   Complexity and Its Interpretation Using Category Theory},
-  booktitle    = {{ICLR}},
+  booktitle    = {International Conference on Learning Representations (ICLR)},
   year         = {2024},
   selected     = {true},
-  url          = {https://iclr.cc/virtual/2024/poster/19454},
+  html          = {https://iclr.cc/virtual/2024/poster/19454},
 }
 
 @article{wu2023energy,
   title={Energy-based out-of-distribution detection for graph neural networks},
   author={Wu, Qitian and Chen, Yiting and Yang, Chenxiao and Yan, Junchi},
-  journal={ICLR},
+  journal={International Conference on Learning Representations (ICLR)},
   year={2023},
 }
 
 @inproceedings{ren2022dice,
   title={Dice: Domain-attack invariant causal learning for improved data privacy protection and adversarial robustness},
   author={Ren, Qibing and Chen, Yiting and Mo, Yichuan and Wu, Qitian and Yan, Junchi},
-  booktitle={Proceedings of the 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  booktitle={ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
   pages={1483--1492},
   year={2022},
 }
@@ -62,6 +62,13 @@
 @inproceedings{wang2022towards,
   title={Towards one-shot neural combinatorial solvers: Theoretical and empirical notes on the cardinality-constrained case},
   author={Wang, Runzhong and Shen, Li and Chen, Yiting and Yang, Xiaokang and Tao, Dacheng and Yan, Junchi},
-  booktitle={ICLR},
+  booktitle={International Conference on Learning Representations (ICLR)},
   year={2023},
+}
+
+@inproceedings{baograph,
+  title={Graph Out-of-Distribution Detection Goes Neighborhood Shaping},
+  author={Bao, Tianyi and Wu, Qitian and Jiang, Zetian and Chen, Yiting and Sun, Jiawei and Yan, Junchi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2024}
 }
