update paper preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   html          = {https://papers.nips.cc/paper_files/paper/2022/hash/022abe84083d235f7572ca5cba24c51c-Abstract-Conference.html},
   year         = {2022},
   selected     = {true},
+  preview      = {paper_shapley.png},
 }
 
 @inproceedings{Chen24RoPE,
@@ -18,8 +19,9 @@
   booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   year         = {2024},
   selected     = {true},
-  html          = {https://neurips.cc/virtual/2024/poster/94296},
+  html         = {https://neurips.cc/virtual/2024/poster/94296},
   pdf          = {RoPE_investigate.pdf},
+  preview      = {paper_rope.png},
 }
 
 @inproceedings{Chen24Matthew,
@@ -28,8 +30,9 @@
   booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   year         = {2024},
   selected     = {true},
-  html          = {https://neurips.cc/virtual/2024/poster/95024},
-  pdf          = {Matthew_Effect.pdf}
+  html         = {https://neurips.cc/virtual/2024/poster/95024},
+  pdf          = {Matthew_Effect.pdf},
+  preview      = {paper_matthew.jpg},
 }
 
 @inproceedings{Chen24Going,
@@ -41,7 +44,8 @@
   booktitle    = {International Conference on Learning Representations (ICLR)},
   year         = {2024},
   selected     = {true},
-  html          = {https://iclr.cc/virtual/2024/poster/19454},
+  html         = {https://iclr.cc/virtual/2024/poster/19454},
+  preview      = {paper_going.png},
 }
 
 @article{wu2023energy,
