update my photo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,6 +53,7 @@
   author={Wu, Qitian and Chen, Yiting and Yang, Chenxiao and Yan, Junchi},
   journal={International Conference on Learning Representations (ICLR)},
   year={2023},
+  html={https://openreview.net/forum?id=zoz7Ze4STUL},
 }
 
 @inproceedings{ren2022dice,
@@ -61,6 +62,7 @@
   booktitle={ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
   pages={1483--1492},
   year={2022},
+  html={https://dl.acm.org/doi/10.1145/3534678.3539242},
 }
 
 @inproceedings{wang2022towards,
@@ -68,11 +70,13 @@
   author={Wang, Runzhong and Shen, Li and Chen, Yiting and Yang, Xiaokang and Tao, Dacheng and Yan, Junchi},
   booktitle={International Conference on Learning Representations (ICLR)},
   year={2023},
+  html={https://openreview.net/forum?id=h21yJhdzbwz},
 }
 
 @inproceedings{baograph,
   title={Graph Out-of-Distribution Detection Goes Neighborhood Shaping},
   author={Bao, Tianyi and Wu, Qitian and Jiang, Zetian and Chen, Yiting and Sun, Jiawei and Yan, Junchi},
   booktitle={International Conference on Machine Learning (ICML)},
-  year={2024}
+  year={2024},
+  html={https://proceedings.mlr.press/v235/bao24c.html}
 }
