--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,3 +80,12 @@
   year={2024},
   html={https://proceedings.mlr.press/v235/bao24c.html}
 }
+
+@inproceedings{chen2025energy,
+    title={Regularizing Energy among Training Samples for Out-of-Distribution Generalization},
+  author={Chen, Yiting and Wu, Qitian and Yan, Junchi},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2025},
+  html={https://openreview.net/pdf?id=Lbx9zdURxe},
+  selected = {true},
+}
